--- a/02_CSS/css/flex-style.css
+++ b/02_CSS/css/flex-style.css
@@ -25,7 +25,7 @@ pre > i {
   font-size: 1.5em;
 }
 
-.item {
+.item {  /* align-items: stretch; 를 무효화함. 크기를 고정시켜버림 */
   width: 75px;
   height: 75px;
 }
