--- a/02_CSS/css/10_flex1.css
+++ b/02_CSS/css/10_flex1.css
@@ -17,9 +17,9 @@
   /* justify-content: flex-start; */
   /* justify-content: flex-end; */
   /* justify-content: center; */
-  /* justify-content: space-around; */
-  /* justify-content: space-evenly; */
-  /* justify-content: space-between; */
+  /* justify-content: space-around; */    /* 남은 공간을 box 갯수의 두배로 쪼개서 박스의 양 옆에 하나씩. 양끝은 한개씩만 붙고 요소 사이는 두개씩 붙으니 간격이 조금 다름 */
+  /* justify-content: space-evenly;    /* 남은 공간을 box + 1 개 만큼 쪼개어 박스의 옆에 하나씩. 간격이 동일해짐 */
+  /* justify-content: space-between; */   /* 최외각 요소를 양끝에 공백없이 붙여버림 */
 
   /* 기본 값 */
   /* 교차 축 방향으로 크기가 지정되어 있으면 늘어나지 않음 */
